--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
   "dependencies": {
     "express": "^4.18.1",
     "httpie": "^1.1.2",
-    "nodemon": "^2.0.20"
+    "nodemon": "^2.0.20",
+    "pg": "^8.8.0"
   },
   "devDependencies": {
     "chai": "^3.5.0",
