--- a/package.json
+++ b/package.json
@@ -26,7 +26,9 @@
   },
   "homepage": "https://github.com/gSchool/fs-pet-shop#readme",
   "dependencies": {
+    "cors": "^2.8.5",
     "express": "^4.18.1",
+    "formdata": "^0.10.4",
     "httpie": "^1.1.2",
     "nodemon": "^2.0.20",
     "pg": "^8.8.0"
